# loglucid

./: LICENSE  README.md  pyproject.toml
editors/vscode/: README.md  extension.js  package.json
examples/: demo.py  stdlib_app.py
loglucid/: __init__.py  buffer.py  cli.py  errors.py  feed.py  levels.py  logger.py  mcp_server.py  record.py  redact.py  render.py  sinks.py  stdlib_bridge.py  tokens.py
tests/: test_cli.py  test_feed.py  test_logger_and_bridge.py  test_mcp.py  test_render.py  test_tokens.py
